<resources>
    <string name="app_name">Travisano_BOCES1</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone Number</string>
    <string name="age">Age</string>
    <string name="classOrYear">Class/Year</string>
    <string name="addTeacher">Add Teacher</string>
    <string name="clearTeacher">Clear All Teachers</string>
    <string name="addStudent">Add Student</string>
    <string name="clearStudent">Clear all Students</string>
    <string name="updateTeacher">Update Teacher</string>
    <string name="taskName">Task Name</string>
    <string name="name">BOCES</string>
    <string name="title_activity_admin_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
