<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.anthony.travisano_boces1.StudentActivity"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btnImageStudent"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/contactpic"
            tools:layout_editor_absoluteX="239dp" />

        <ImageView
            android:id="@+id/imageAddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            app:srcCompat="@android:drawable/ic_menu_camera" />
    </FrameLayout>


    <EditText
        android:id="@+id/txtFirstName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="66dp" />

    <EditText
        android:id="@+id/txtLastName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="112dp" />

    <EditText
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="157dp" />

    <Spinner
        android:id="@+id/spinnerTeachers"
        android:layout_width="219dp"
        android:layout_height="38dp"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="202dp" />

    <EditText
        android:id="@+id/txtYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/classOrYear"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="238dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAddStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:text="@string/addStudent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="283dp" />

        <Button
            android:id="@+id/btnClearStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_style"
            android:text="@string/clearStudent"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteX="192dp"
            tools:layout_editor_absoluteY="283dp" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_editor_absoluteX="3dp"
        tools:layout_editor_absoluteY="331dp" />

</LinearLayout>
